--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName = employees; encrypt=true; trustServerCertificate=true
+spring.datasource.url=jdbc:sqlserver://localhost:1433;databaseName = PhoneShop; encrypt=true; trustServerCertificate=true
 spring.datasource.username= Admin
 spring.datasource.password=111111
 spring.jpa.show-sql=true
@@ -10,7 +10,3 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.SQLServerDialect
 
 
 
-spring.session.jdbc.table-name=Spring_Session
-spring.session.store-type=jdbc
-spring.session.jdbc.initialize-schema=always
-spring.session.timeout.seconds=900
